--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity">
+    tools:context=".table">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/header"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -19,152 +21,306 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/comvergesQuantity"
+        android:id="@+id/cartSubtitle"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:gravity="center"
+        android:text="@string/description_cart_subtitle"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_below="@+id/header"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.198" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/comvergesPrice"
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:id="@+id/cartTable"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.251" />
+        android:layout_marginTop="140dp"
+        android:layout_below="@+id/header"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp">
 
-    <!--<TextView
-        android:id="@+id/noItems"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/description_no_items"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
+        <!-- Table header -->
+        <TableRow android:background="@android:color/white">
 
-    <Button
-        android:id="@+id/removeComverges"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:text="X comverges"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Item"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"
+                android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/comptonQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.324" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Qty"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textStyle="bold"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
 
-    <TextView
-        android:id="@+id/comptonPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textStyle="bold"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
 
-    <TextView
-        android:id="@+id/flexigenQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/white"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/flexigenPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.644" />
+        </TableRow>
 
-    <TextView
-        android:id="@+id/fuelworksQuantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.574" />
+        <!-- Row 1: Compton -->
+        <TableRow>
 
-    <TextView
-        android:id="@+id/fuelworksPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.686" />
+            <TextView
+                android:id="@+id/comptonName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Compton"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"/>
 
-    <TextView
-        android:id="@+id/totalPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.464"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.755" />
+            <TextView
+                android:id="@+id/comptonQuantity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/comptonPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0.00"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/removeCompton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/remove"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="1"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+        </TableRow>
+
+        <!-- Row 2: Comverges -->
+        <TableRow>
+
+            <TextView
+                android:id="@+id/comvergesName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Comverges"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"/>
+
+            <TextView
+                android:id="@+id/comvergesQuantity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/comvergesPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0.00"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/removeComverges"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/remove"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"/>
+
+        </TableRow>
+
+        <!-- Row 3: Flexigen -->
+        <TableRow>
+
+            <TextView
+                android:id="@+id/flexigenName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Flexigen"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"/>
+
+            <TextView
+                android:id="@+id/flexigenQuantity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/flexigenPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0.00"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/removeFlexigen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/remove"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"/>
+
+        </TableRow>
+
+        <!-- Row 4: Fuelworks -->
+        <TableRow>
+
+            <TextView
+                android:id="@+id/fuelworksName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Fuelworks"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"/>
+
+            <TextView
+                android:id="@+id/fuelworksQuantity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/fuelworksPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0.00"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="2"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:id="@+id/removeFuelworks"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/remove"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"/>
+
+        </TableRow>
+
+        <!-- Total -->
+        <TableRow>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Total"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/totalPrice"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="$0.00"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="4"
+                android:textStyle="bold"
+                android:textAlignment="viewEnd"
+                android:layout_gravity="end"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/white"
+                android:padding="10sp"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"/>
+
+        </TableRow>
+
+    </TableLayout>
 
     <Button
         android:id="@+id/button"
+        android:layout_below="@+id/cartTable"
+        android:layout_centerHorizontal="true"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="210dp"
         android:onClick="openShippingInformation"
         android:text="@string/button_checkout"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -174,4 +330,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
